# magicbox

./: CMakeLists.txt  README.md  clear.sh
include/: Point.hpp  common.hpp  config.hpp  version.hpp
src/: CMakeLists.txt  Point.cpp
tests/: CMakeLists.txt  CmdParser.hpp  testPoint.cpp
utils/: DirHelper.hpp  LogMgr.hpp  util.hpp
