
SET(POINT_DEMO "point_demo")

INCLUDE_DIRECTORIES(${UTIL_PATH})
INCLUDE_DIRECTORIES(.)

SET(TEST_SRC_LIST testPoint.cpp)

MESSAGE(STATUS "TEST_SRC_LIST: ${TEST_SRC_LIST}")
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH ${DEMO_PATH}")

SET(EXECUTABLE_OUTPUT_PATH ${DEMO_PATH})

ADD_EXECUTABLE(${POINT_DEMO} ${TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(${POINT_DEMO} point glog)
